Initial new layout for the site.

--- a/css/home.css
+++ b/css/home.css
@@ -1,183 +1,68 @@
-html {
-    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
-    /*background: -moz-linear-gradient(top,white,white 300px,#DFDFFF);*/
-}
-body {
-    font-size: 100%;
-    line-height: 1.125em;
-    margin: 150px 10px 10px 10px;
+@import url(http://fonts.googleapis.com/css?family=Fira+Sans:700|Source+Code+Pro|Roboto);
 
+.container {
+    margin-top: 40px;
 }
 
-ul{
-    font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
+.code{
+    font-family: 'Source Code Pro', serif;
+    font-weight: 700;
 }
 
-#header{
-
-   margin-left: auto;
-   margin-right: auto;
-   width: 400px;
-   text-align: center;
-   font-size: 1.3em;
-   line-height: 1.3em;
-
+h1{
+    font-family: 'Fira Sans', sans-serif;
+    display: inline-block;
 }
 
-.s1{
-    text-shadow: 3px 3px 4px #CCC;
-}
-
-p {
-    font-size: 0.875em;
-}
-
-h1 {
-    font-weight: bolder;
-    font-size: 2em;
-    font-style: italic;
-    margin-bottom: 5px;
-}
-
-h2 {
-    font-weight: bold;
-    font-size: 1.4em;
-}
-
-#content {
-    max-width: 1000px;
-    margin: 30px auto 30px auto;
-}
-
-#header{
-    position: relative;
-    top: -500px;
-    -webkit-transition: top 2s ease-in-out;
-    -moz-transition: top 2s ease-in-out;
-    -o-transition: top 2s ease-in-out;
+.top-heading{
+    border-bottom: 1px solid #e2e2e2;
     margin-bottom: 10px;
 }
 
-#things{
-    width: 500px;
-    margin-top: 100px;
-    opacity: 0;
-    -webkit-transition: all 1s ease-in-out;
-    -moz-transition: all 1s ease-in-out;
-    -o-transition: all 1s ease-in-out;
+.top-heading h1{
+    margin-bottom: 0;
 }
 
-#things li{
-  margin: 5px 0px;
+img.profile-photo {
+    height: 150px;
+    width: 150px;
+    border-radius: 100%;
+    border: 3px solid #ccc;
+    display: block;
 }
 
-#header.inPlace{
-    top: 0;
+.profile-caption{
+    font-size: 1em;
+    margin-top: 10px;
 }
 
-#things.inPlace{
-    margin-top: 20px;
-    opacity: 1;
+.profile-caption .fa{
+    display: inline-block;
+    height: 14px;
+    width: 14px;
 }
 
-
-.contact_info > div {
-    display: inline;
-    margin-left: 25px;
-    font-size: .9em;
+.profile-caption a{
+    margin-left: 5px;
 }
 
-.contact_info {
-    text-align: right;
+#profiles {
+    font-size: 1.5em;
+    font-family: 'Droid Sans', sans-serif;
+    line-height: 1.5;
 }
 
-.subheading {
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-bottom: 10px;
+#profiles a {
+    margin-left: 5px;
 }
 
-h3 {
-    font-weight: bold;
+#profiles a:hover{
+    color: #337ab7;
 }
 
-.devTypes {
-    color:#999
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-a:hover {
-    color: #009;
-    text-decoration: underline;
-}
-
-
-
-.c{
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.cText{
+#profiles .fa {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
     text-align: center;
-}
-
-.horList{
-    margin-bottom: 15px;
-}
-
-.horList > li{
-   display: inline;
-   margin: auto 5px;
-}
-
-.hidden{
-    color: white;
-}
-
-.hidden:hover{
-    color: white;
-}
-
-lk{
-    color: black;
-}
-
-#connections > li > a:before{
-    content: "@";
-}
-
-#consoleCanvas{
-    width: 600px;
-    height: 600px;
-}
-
-li.breakItem{
-  display: block;
-}
-
-@media print {
-    body {
-        font-size: .8em;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    #content {
-        margin-top: 0;
-    }
-
-    #logos > img {
-        margin-left: 15px;
-        width: 100px;
-        height: 65px;
-    }
-}
-
-nav ul li {
-    display: inline;
 }
