--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,71 +1,77 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<title>{{ page.title }}</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+<head>
+{% include _head.html %}
+</head>
 
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+<body class="post">
 
-		<!-- Fonts -->
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+{% include _browser-upgrade.html %}
 
-		<!-- Local stylesheet -->
-		<link rel="stylesheet" href="/css/base.css">
+{% include _navigation.html %}
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	</head>
-	<body class="with-navbar">
-        <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6 navbar-row">
-                    <div class="navbar-header">
-                      <a class="navbar-brand" href="/index.html">
-                        <img alt="Brand" src="http://www.gravatar.com/avatar/968d5dfb184edf2642ef5fdc53055738?s=36">
-						<span>Mark Adams</span>
-                      </a>
-                    </div>
-                </div>
-            </div>
-          </div>
-		</nav>
-		<div class="fluid-container">
-            <div class="col-md-offset-3 col-md-6">
-				<div>
-	                <h1>{{ page.title }}</h1>
-					<div class="post-date">Posted {{ page.date | date: "%Y-%m-%d" }}</div>
-				</div>
-                <div class="post-content">
-                    {{ content }}
-                </div>
-				<div id="post-nav" class="clearfix">
-					{% if page.previous.url %}
-					<a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-					{% endif %}
-					{% if page.next.url %}
-					<a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-					{% endif %}
-				</div>
-				<div id="post-comments" class="clearfix">
-					<div id="disqus_thread"></div>
-					<script type="text/javascript">
-					    /* * * CONFIGURATION VARIABLES * * */
-					    var disqus_shortname = 'markadams';
+{% if page.image.feature %}
+  <div class="image-wrap">
+  <img src=
+    {% if page.image.feature contains 'http' %}
+      "{{ page.image.feature }}"
+    {% else %}
+      "{{ site.url }}/images/{{ page.image.feature }}"
+    {% endif %}
+  alt="{{ page.title }} feature image">
+  {% if page.image.credit %}
+    <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
+  {% endif %}
+  </div><!-- /.image-wrap -->
+{% endif %}
 
-					    /* * * DON'T EDIT BELOW THIS LINE * * */
-					    (function() {
-					        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-					        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-					        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-					    })();
-					</script>
-				</div>
-            </div>
-		</div>
-	</body>
+<div id="main" role="main">
+  <div class="article-author-side">
+    {% include _author-bio.html %}
+  </div>
+  <article class="post">
+    <div class="headline-wrap">
+      {% if page.link %}
+        <h1><a href="{{ page.link }}">{{ page.title }}</a></h1>
+      {% else %}
+        <h1><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a></h1>
+      {% endif %}
+    </div><!--/ .headline-wrap -->
+    <div class="article-wrap">
+      {{ content }}
+      <hr />
+      <footer role="contentinfo">
+        {% if page.share != false %}{% include _social-share.html %}{% endif %}
+        <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
+      </footer>
+    </div><!-- /.article-wrap -->
+  {% if site.owner.disqus-shortname and page.comments == true %}
+    <section id="disqus_thread"></section><!-- /#disqus_thread -->
+  {% endif %}
+  </article>
+</div><!-- /#main -->
+
+<div class="footer-wrap">
+  {% if site.related_posts.size > 0 %}
+  <div class="related-articles">
+  <h4>You might also enjoy <small class="pull-right">(<a href="{{ site.url }}/posts/">View all posts</a>)</small></h4>
+    <ul>
+    {% for post in site.related_posts limit:3 %}
+      <li><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+    {% endfor %}
+    </ul>
+    <hr />
+  </div><!-- /.related-articles -->
+  {% endif %}
+  <footer>
+    {% include _footer.html %}
+  </footer>
+</div><!-- /.footer-wrap -->
+
+{% include _scripts.html %}	        
+
+</body>
 </html>
